--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@mui/material": "^6.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
